Added static slider img, fixed banner and logo

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </div>
   
   <nav class="navbar navbar-inverse navbar-fixed-top navbar-custom pull-right" role="navigation">
-    <div class="container clearfix">
-      <div class="navbar-header clearfix">
+    <div class="container">
+      <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -45,15 +45,16 @@
         <li><a href="#">SHOP</a></li>
         <li><a href="#">SIGNIN</a></li>
         <li><a href="#">REGISTER</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
       </ul>
     </div> <!--End Container-->
   </nav>
   <div class="container content">
       <div class="row">
-        <div class="col-md-12"></div>
-      </div>
-    </div>
+        <img src="img/tekpocket-banner-1.jpg" alt="tekPocket Banner" />
+        <p class="text-center">This is the product slider.</p>
+      </div> <!--End Row-->
+    </div> <!--End Content container-->
 
 
 
