Added row under slider and footer with nav

--- a/index.html
+++ b/index.html
@@ -54,6 +54,47 @@
         <img src="img/tekpocket-banner-1.jpg" alt="tekPocket Banner" />
         <p class="text-center">This is the product slider.</p>
       </div> <!--End Row-->
+      <div class="row">
+        <div class="col-md-12 colorbar">
+
+        </div>
+      </div>
+      <!--Start Row 2-->
+      <div class="row content-row">
+        <div class="col-md-4">
+
+        </div>
+        <div class="col-md-4">
+          <h2>What are TekPockets?</h2>
+          <p>TekPockets are high quality quilted neck pouchs/wallets made of cotton fabric. Durable but stylish, they come in a huge assortment of fabrics, and are fully
+            customizable. 
+          </p>
+          <p>Show your team spirit or create your own style! Makes a great gift for anyone or purchase a gift card so they can design their own.</p>
+        </div>
+      </div> <!--End Row 2-->
+      <div class="row">
+        <div class="col-md-12 footer">
+          <div class="col-md-3">
+            <h4>About</h4>
+            <ul class="footer-nav">
+              <li><a href="#">About Me</a></li>
+              <li><a href="#">Press Releases</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Reviews</a></li>
+              <li><a href="#">Terms and Conditions</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+
+          </div>
+          <div class="col-md-3">
+
+          </div>
+          <div class="col-md-3">
+
+          </div>
+        </div>
+      </div>
     </div> <!--End Content container-->
 
 
